# atan2

./: .clang-format  CMakeLists.txt  LICENSE  README.md  a.out  atan2.cpp  trigonometry.cpp
